--- a/quartz/styles/table.scss
+++ b/quartz/styles/table.scss
@@ -13,6 +13,7 @@ table {
   &.no-min-width th,
   &.no-min-width td {
     min-width: 0;
+    overflow-wrap: break-word; // Widens cells for td content, IDK why
   }
 
   &.center-table-headings th {
